** KPILOT CHANGELOG **
======================

2004-10-01  Adriaan de Groot
* Merged nice patch from Adrian S for HotPlug.
* Moved tickle stuff into a separate thread, so that it doesn't
  require a Qt event loop to keep the Pilot awake.
* Added tickles in the right (?) places in the abbrowser - around
  the loading part.
* Discovered that UserCheck used KMessageBox::question*() instead of
  a version with timeouts. Fixed that by adding a qYNCancel() to
  InteractiveSync, and updated both qYN*() methods there to use
  KDE 3.3 KMessageBox support.
* Merged InteractiveAction with SyncAction, cleaning up the inheritance
  tree and making it possible to conduits to use the question* methods.

2004-09-26  Adriaan de Groot
* Put up new tarballs on kpilot.org.
* Patched up the KNotes conduit a little - notes listed as modified
  but unknown to the Pilot are now added as new.
* Bumped version to 4.4.5. Polished the splash a little.
* Fixed 71122, finally. There wasn't any code at all in the conduit
  for deleting memos.


2004-09-22  Adriaan de Groot
* Added some cheap RTTI to PilotDatabase, so you can call
  dbType() to find out if it's really a local or a serial DB.
* Stared at the doc conduit for a long time. Did whitespace first.

2004-09-18  Adriaan de Groot & Reinhold Kainhofer
* Deprecated a bunch of poorly-named functions in lib/, and
  moved everything to the new names. Finally, no more getCat(),
  but just category().
* Detect special case of bad resource headers in file installer.
* Rearranged sync enum just a little. Moved eTest out of the way,
  since it's not really a valid value to pass to the demon and made
  0 the value to indicate "default, whatever is stored in the
  config file".
* Fixed up sync-type not honored, clarified next-sync menu (I
  think so, didn't ask -usability about it though).


2004-08-16  Adriaan de Groot
* Was away at a summer school for two weeks. Got no KPilot stuff
  done except an off-by-one bug in the memo stuff.